<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina5_9" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Owh-g8-Li4">
                                <rect key="frame" x="20" y="60" width="335" height="718"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qxe-S4-NMx">
                                        <rect key="frame" x="0.0" y="0.0" width="335" height="23.666666666666668"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1t2-NL-faw" userLabel="Question Title Label">
                                                <rect key="frame" x="0.0" y="0.0" width="299" height="23.666666666666668"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3w0-LR-FCY" userLabel="Index Label">
                                                <rect key="frame" x="299" y="0.0" width="36" height="23.666666666666668"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iSP-6l-d8p" userLabel="Preview Image">
                                        <rect key="frame" x="0.0" y="43.666666666666657" width="335" height="502.66666666666674"/>
                                        <color key="backgroundColor" name="YP White"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="iSP-6l-d8p" secondAttribute="height" multiplier="2:3" id="YTi-B7-Yvz"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше, чем 5?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J3z-j3-aMd" userLabel="Question Label">
                                        <rect key="frame" x="0.0" y="566.33333333333337" width="335" height="71.666666666666629"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="23"/>
                                        <color key="textColor" name="YP White"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="qqy-w3-x4T">
                                        <rect key="frame" x="0.0" y="658" width="335" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V3h-ZS-aFb" userLabel="No button">
                                                <rect key="frame" x="0.0" y="0.0" width="157.66666666666666" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="No"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="60" id="KFc-5Q-QT4"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Нет">
                                                    <color key="titleColor" name="YP Black"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="En0-nc-zAj"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gV6-Hi-eeq" userLabel="Yes button">
                                                <rect key="frame" x="177.66666666666663" y="0.0" width="157.33333333333337" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Да">
                                                    <color key="titleColor" name="YP Black"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4zD-TY-wkV"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstItem="gV6-Hi-eeq" firstAttribute="height" secondItem="V3h-ZS-aFb" secondAttribute="height" id="iBA-DH-25N"/>
                                            <constraint firstItem="gV6-Hi-eeq" firstAttribute="width" secondItem="V3h-ZS-aFb" secondAttribute="width" id="wzl-wz-sB2"/>
                                        </constraints>
                                    </stackView>
                                </subviews>
                            </stackView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="iYK-Zw-Ql3">
                                <rect key="frame" x="177.66666666666666" y="396" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YP Black"/>
                        <constraints>
                            <constraint firstItem="Owh-g8-Li4" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="0Su-gq-Ie9"/>
                            <constraint firstItem="iYK-Zw-Ql3" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Roo-z2-DjF"/>
                            <constraint firstItem="Owh-g8-Li4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Ugc-1W-GqM"/>
                            <constraint firstItem="iYK-Zw-Ql3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ed2-bm-b6H"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Owh-g8-Li4" secondAttribute="trailing" constant="20" id="gU9-2T-gux"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Owh-g8-Li4" secondAttribute="bottom" id="kQ9-6W-Nt0"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="iYK-Zw-Ql3" id="zPq-Fi-gdy"/>
                        <outlet property="counterLabel" destination="3w0-LR-FCY" id="cCj-9m-FPg"/>
                        <outlet property="imageView" destination="iSP-6l-d8p" id="Ss6-Qz-TFo"/>
                        <outlet property="noButton" destination="V3h-ZS-aFb" id="Zul-mD-5hV"/>
                        <outlet property="textLabel" destination="J3z-j3-aMd" id="cqK-aq-Me7"/>
                        <outlet property="yesButton" destination="gV6-Hi-eeq" id="Ult-gT-khl"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-55.072463768115945" y="55.580357142857139"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="YP Black">
            <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP White">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
